[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/ShopEntrySecret.gd" type="Script" id=1]
[ext_resource path="res://Assets/Materials/ui_icon.tres" type="Material" id=2]
[ext_resource path="res://Assets/Sprites/treasure_diamond.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/iosevka-extended-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/robothead.ttf" type="DynamicFontData" id=7]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 7 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform sampler2D texture_resource;

void fragment(){
	COLOR = texture(texture_resource, UV);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 1 )
shader_param/texture_resource = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 4 )

[node name="ShopEntrySecret" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 500.0
margin_top = 251.0
margin_right = 524.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 24.0
mouse_filter = 2

[node name="Image" type="ColorRect" parent="Panel/CenterContainer/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
visible = false
material = ExtResource( 2 )
margin_left = -13.0
margin_top = -25.0
margin_right = 37.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 4.0
margin_right = 24.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 6 )
text = "?"

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 24.0
margin_bottom = 98.0
mouse_filter = 1

[node name="Cost" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
margin_left = -18.0
margin_top = -23.0
margin_right = 41.0
margin_bottom = 23.0

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
margin_right = 26.0
margin_bottom = 41.0
mouse_filter = 1

[node name="DiamondIcon" type="ColorRect" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost/AspectRatioContainer2"]
modulate = Color( 0.176471, 0.854902, 0.854902, 1 )
material = SubResource( 7 )
margin_top = 3.5
margin_right = 34.0
margin_bottom = 37.5
rect_min_size = Vector2( 34, 34 )
mouse_filter = 1

[node name="DiamondAmount" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/Cost"]
unique_name_in_owner = true
margin_left = 30.0
margin_right = 48.0
margin_bottom = 41.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "2"

[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
